Project

General

Profile

Actions

Bug #40405

closed

Lifecycle rule shouldn't contain deletemarker or multipart expiration if it has tags.

Added by zhang sw almost 5 years ago. Updated over 4 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
-
Target version:
-
% Done:

0%

Source:
Tags:
lifecycle
Backport:
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

AbortIncompleteMultipartUpload or ExpiredObjectDeleteMarker can't be specified with Tags in S3 lifecycle configuration.

com.amazonaws.services.s3.model.AmazonS3Exception: AbortIncompleteMultipartUpload cannot be specified with Tags. (Service: Amazon S3; Status Code: 400; Error Code: InvalidRequest;

com.amazonaws.services.s3.model.AmazonS3Exception: ExpiredObjectDeleteMarker cannot be specified with Tags. (Service: Amazon S3; Status Code: 400; Error Code: InvalidRequest

Actions #2

Updated by Casey Bodley almost 5 years ago

  • Status changed from New to 7
  • Tags set to lifecycle
Actions #3

Updated by J. Eric Ivancich over 4 years ago

  • Status changed from 7 to Resolved
Actions

Also available in: Atom PDF